crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/classes/constructorDeclarations/constructorParameters/readonlyInConstructorParameters.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\conformance\\classes\\constructorDeclarations\\constructorParameters\\readonlyInConstructorParameters.ts"
---

# Input

```js
class C {
    constructor(readonly x: number) {}
}
new C(1).x = 2;

class E {
    constructor(readonly public x: number) {}
}

class F {
    constructor(private readonly x: number) {}
}
new F(1).x;```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -4,7 +4,7 @@
 new C(1).x = 2;
 
 class E {
-  constructor(public readonly x: number) {}
+  constructor(readonly public x: number) {}
 }
 
 class F {
```

# Output

```js
class C {
  constructor(readonly x: number) {}
}
new C(1).x = 2;

class E {
  constructor(readonly public x: number) {}
}

class F {
  constructor(private readonly x: number) {}
}
new F(1).x;
```


# Errors
```
readonlyInConstructorParameters.ts:7:26 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × 'public' must precede 'readonly'
  
  × move this modifier
  
    ┌─ readonlyInConstructorParameters.ts:7:26
    │
  7 │     constructor(readonly public x: number) {}
    │                          ^^^^^^
  
  i before this modifier
  
    ┌─ readonlyInConstructorParameters.ts:7:17
    │
  7 │     constructor(readonly public x: number) {}
    │                 ^^^^^^^^
  

```


